--- a/numbers.ipynb
+++ b/numbers.ipynb
@@ -40,14 +40,19 @@
     "\n",
     "mnist = tf.keras.datasets.mnist\n",
     "\n",
+    "# Cargar los datos de entrenamiento y prueba\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "\n",
+    "# Preprocesar los datos\n",
     "x_train = x_train.reshape(x_train.shape[0], 784).astype('float32') / 255\n",
     "x_test = x_test.reshape(x_test.shape[0], 784).astype('float32') / 255\n",
     "\n",
+    "# Parámetros de entrenamiento\n",
     "learning_rate = 0.01\n",
     "batch_size = 100\n",
     "update_step = 10\n",
     "\n",
+    "# Configuración de capas y modelo\n",
     "layer_1_nodes = 4000\n",
     "layer_2_nodes = 4000\n",
     "layer_3_nodes = 4000\n",
@@ -61,19 +66,22 @@
     "\n",
     "model = tf.keras.Model(inputs=model_input, outputs=model_output)\n",
     "\n",
+    "# Compilación y entrenamiento del modelo\n",
     "optimizer = tf.keras.optimizers.SGD(learning_rate)\n",
-    "\n",
     "model.compile(optimizer=optimizer, loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "num_epochs = 10\n",
     "model.fit(x_train, y_train, epochs=num_epochs, batch_size=batch_size)\n",
     "\n",
+    "# Evaluación del modelo\n",
     "test_loss, test_accuracy = model.evaluate(x_test, y_test)\n",
     "\n",
+    "# Guardar el modelo\n",
     "model.save('numbers.h5')\n",
     "\n",
+    "# Imprimir resultados\n",
     "print(\"Test loss:\", test_loss)\n",
-    "print(\"Test accuracy:\",test_accuracy)"
+    "print(\"Test accuracy:\", test_accuracy)\n"
    ]
   }
  ],
